# llm-3

./: .env  accuracy_judge_prompt_template.md  main.py  pyproject.toml
new_project/: README.md  TestCase.xlsx  UPLOAD_GUIDE.md  dataset_manager.py  ev_agent_orchestrator.py  ev_rag_agent.py  example_usage.py  prompt_manager.py  real_implementation.py  run.py  server_manager.py  visualization.py  web_interface.py  발표용_워크플로우.md
new_project/rag_store/: bm25_corpus.jsonl
new_project/rag_store/faiss/: index.faiss  index.pkl
